corrected the header on mobiles and am working on the checkout page further.

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -129,6 +129,10 @@
 				width: 4rem;
 			}
 
+			&__nav {
+				left: -5rem;
+			}
+
 			&__navigation {
 				& > *:not(:last-child) {
 					margin-right: 10%;
